# ChangeLog for media-sound/xmms
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/Attic/ChangeLog,v 1.155 2005/01/23 00:55:45 eradicator Exp $

*xmms-1.2.10-r10 (22 Jan 2005)

  22 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +files/po-update.pl, +xmms-1.2.10-r10.ebuild:
  Revbump to latest upstream cvs. Added a skin dir browser and numberic keypad
  controls. This should fix bug #71262.

  04 Jan 2005; Markus Rothe <corsair@gentoo.org> xmms-1.2.10-r5.ebuild,
  xmms-1.2.10-r9.ebuild:
  Optimazion >-O1 won't work on ppc64

  12 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r5.ebuild:
  Added call to libtoolize.

  09 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r9.ebuild:
  xmms-mad versioned DEP to fix bugs on popping and skipped starts.

  08 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r9.ebuild:
  Fix gcc-2.95 compilation. Closes bug #70076. Thanks go to Matt Taylor
  <liverbugg@juno.com> for keeping us honest.

  31 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r9.ebuild:
  Removing .desktop from applnk.  Removed postinst ewarning.  Added check
  for /dev/sound for bug #20647.

*xmms-1.2.10-r9 (30 Oct 2004)

  30 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  -xmms-1.2.10-r7.ebuild, -xmms-1.2.10-r8.ebuild, +xmms-1.2.10-r9.ebuild:
  Revision bump and removing from package.mask.  Added gcc-4 patch.

  24 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r8.ebuild:
  Fixed a hang and a crash related to id3v2 tag support.

  23 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r8.ebuild:
  Added id3v2 editor and cleaned up code a bit.

  18 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r8.ebuild:
  Added ISO-8859-1 encoding patch.  Added sort by track length.

  14 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r8.ebuild: