@@ -1,4 +1,4 @@
 MD5 03a85cfc5e1877a2e1f7be4fa1d3f63c xmms-1.2.10.tar.bz2 2418265
 MD5 41eababfa8bad11e9e34e467cdfb86be gentoo_ice-xmms-0.2.tar.bz2 51839
-MD5 71df70d2815115b1cc3262fcdeb3b4d4 xmms-1.2.10-gentoo-patches-2.1.7.tar.bz2 561430
+MD5 c471d830d9140007b40f26ebd4047f79 xmms-1.2.10-gentoo-patches-2.1.8.tar.bz2 554306
 MD5 fe54f2ec779bc995176e63e3e77cca11 gnomexmms.xpm 7979
